[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["Sami Sidoroff <sami.sidoroff@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
